--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "konnect-app-plugin",
-  "version": "1.0.55",
+  "version": "1.0.66",
   "description": "konnect-app-plugin",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   "dependencies": {
     "@capacitor/http": "^0.0.2",
     "axios": "^1.7.2",
+    "konnect-app-plugin": "^1.0.64",
     "node-fetch": "^3.3.2"
   }
 }
