--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "konnect-app-plugin",
-  "version": "1.0.70",
+  "version": "1.0.73",
   "description": "konnect-app-plugin",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+ "scripts": {
+  "sign": "node sign.js",
+  "verify": "node verify.js",
+  "generate-keys": "node generateKeys.js",
+  "prepublishOnly": "npm run generate-keys && npm run sign",
+   "postinstall": "npm run verify",
+  "test": "echo \"Error: no test specified\" && exit 1"
+},
   "repository": {
     "type": "git",
     "url": "https://github.com/koinmobility/konnect-app-plugin"
